# vector-retail

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements-research.txt  requirements.txt
.github/workflows/: ci.yml  terraform.yml
app/agent/: bank_grade_agent.py
app/api/: server.py
app/core/: config.py
app/db/: vector_store.py
config/: policy_rules.json
config/prompts/: market_intel.yaml  meta_critic.yaml  portfolio_analysis.yaml  rebalance.yaml  risk_assessment.yaml  sentiment_analysis.yaml  synthesizer.yaml  tax_optimization.yaml
docs/: COMPLIANCE.md  RUNBOOK.md
k8s/: deployment.yaml
notebooks/: model_evaluation.ipynb
scripts/: healthcheck.py  ingest_fundamentals.py  ingest_news.py  ingest_regulatory.py
src/vector_retail/: __init__.py  main.py  orchestrator.py  server.py
src/vector_retail/agents/: base.py  market.py  meta_critic.py  portfolio.py  rebalance.py  risk.py  sentiment.py  synthesizer.py  tax.py
src/vector_retail/core/: audit.py  enums.py  models.py  policy.py  prompts.py
src/vector_retail/data/: circuit_breaker.py  embedder.py  oracle.py  regulatory_embedder.py  regulatory_retriever.py  retriever.py
src/vector_retail/evaluation/: hitl.py  shadow_eval.py
src/vector_retail/security/: pii.py  prompt_guard.py  rbac.py
terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/modules/ai/: main.tf  outputs.tf  variables.tf
terraform/modules/api/: main.tf  outputs.tf
terraform/modules/cache/: main.tf  outputs.tf
terraform/modules/compute/: main.tf  variables.tf
terraform/modules/database/: main.tf  outputs.tf  variables.tf
terraform/modules/monitoring/: main.tf  outputs.tf  variables.tf
terraform/modules/networking/: main.tf  outputs.tf
terraform/modules/registry/: main.tf
terraform/modules/secrets/: main.tf  outputs.tf  variables.tf
terraform/modules/storage/: main.tf  outputs.tf  variables.tf
tests/: test_bank_agent.py
tests/integration/: test_orchestrator_pipeline.py
tests/unit/: test_audit.py  test_oracle.py  test_pii.py  test_policy.py  test_sentiment.py  test_shadow_eval.py
