[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vector-retail"
version = "2.0.0"
description = "Production-grade retail finance AI agent"
requires-python = ">=3.11"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "jasmine2chen" }]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B"]
ignore = ["S101"]   # Allow assert in tests

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.coverage.run]
source = ["src/vector_retail"]
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/main.py",      # Demo entrypoint — not unit-testable
    "*/server.py",    # FastAPI server — not unit-testable without full infra
]

[tool.coverage.report]
# Unit tests cover: audit, oracle, pii, policy, shadow_eval, sentiment, base, prompts
# Integration tests (tests/integration/) cover: orchestrator, agents, end-to-end flows
# fail_under reflects unit-test-only coverage; combined coverage target is 75%
fail_under = 54
show_missing = true
